# CompareTheBrew

./: .env.example  .gitignore  DATABASE_SCHEMA.md  README.md  add_test_task.py  analyze_ll_dump.py  app.py  config.py  dump_ll_first_principles.py  extract_ll_data.py  first_principles_desktop_stealth_js.html  intellisearch.py  pyproject.toml  requirements.txt  search_synonyms.json  sitemaps.json  startserver.sh
comparethebrew.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
db/: databaseHandler.py
db/schema/: schema.sql  sync_schema.py
entities/: drink_item.py
scrapers/: manager.py  processors.py
scraping/: LIQUORLAND_FIRSTCHOICE_STRATEGY.md  SCRAPING_GUIDELINES.md  bws_processor.py  coles_processor.py  controller.py  fetcher.py  liquorland_processor.py  manager.py  processor.py  processors.py  scrape.py  sitemaps.json
scripts/: classItem.py  databaseHandler.py  database_example.py  dedup_drinks_by_link.py  init_db.py  migrate_efficiency_to_score.py  migrate_numb_items_to_pack_qty.py  migrate_zero_alc.py  recalc_scores.py  scrape.py  setup.sh
search/: intellisearch.py
static/css/: about-styles.css  dark.css  light-modal.css  main.css  results-styles.css  styles.css
static/js/: scripts.js
templates/: 404.html  500.html  About.html  index.html  results.html  results_page.html  top50.html
templates/snippets/: footer.html  mobile-nav.html  pagination.html  results-grid.html  results_grid.html  search-controls.html  search-metadata.html  search_controls.html  (+1 more)
tools/: db_search_cli.py  scraping-controller-cli.py  task_queue_cli.py
(+6 files in other folders)
