[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "comparethebrew"
version = "0.1.0"
description = "Compare drink prices across Australian vendors"
requires-python = ">=3.10"
dependencies = [
    "flask",
    "python-dotenv",
    "beautifulsoup4",
    "ipinfo",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["db*", "scripts*", "search*"]
exclude = ["logs*", "static*", "templates*", "scraping*"]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''
